@@ -118,10 +118,10 @@ public class SynchronizationService {
 					logger.trace("[[TRACE]] Uploading file {}", path.toString());
 					uploadService.upload(path, relativePath, remoteFolder, mapItems.get(relativePath));
 				} else {
-					logger.debug("[[DEBUG]] {} will not be synchronized because it is oldest than the remote one",path.toString());
+					logger.debug("[[DEBUG]] {} will not be uploaded because it is oldest than the remote one",path.toString());
 				}
 			} else {
-				logger.debug("[[DEBUG]] {} will not be synchronized because missing prerequisite (e.g. exclusion pattern)", path.toString());
+				logger.debug("[[DEBUG]] {} will not be uploaded because missing prerequisite (e.g. exclusion pattern)", path.toString());
 			}
 		});
 	}
@@ -129,57 +129,72 @@ public class SynchronizationService {
 	private void s3toLocalSync(String remoteFolder, String localRootFolder) {
 		List<Item> items = mongoOperations.find(new Query(Criteria.where("ownedByFolder").is(remoteFolder)),
 				Item.class);
+		logger.debug("[[DEBUG]] Remote folder contains {}# items", items.size());
 		for (Item item : items) {
 			if (!localRootFolder.endsWith("/") && !item.getOriginalName().startsWith("/")) {
 				localRootFolder = localRootFolder + "/";
 			}
-			String itemLocalFullLocation = localRootFolder + item.getOriginalName();
-			Path itemLocalFullPath = Paths.get(itemLocalFullLocation);
-			if (FileUtils.notMatchFilters(exclusionPatterns.get(localRootFolder), item.getOriginalName())) {
-				if (item.getDeleted()) {
-					try {
-						if (Files.exists(itemLocalFullPath) && Files.isWritable(itemLocalFullPath)) {
-							Files.delete(itemLocalFullPath);
-						}
-					} catch (IOException e) {
-						e.printStackTrace();
-					}
-				} else {
-					if (item.getUploadedBy().equals(UserSpecificPropertiesManager.getConfiguration().getAlias())) {
-						// deleted items -> uploaded by current user but not found on local machine
-						if (!Path.of(localRootFolder + item.getOriginalName()).toFile().exists()) {
-							if (!uploadService.delete(remoteFolder, item.getOriginalName())) {
-								System.out.println("Error deleting s3 file");
+			if(!FileUtils.notMatchFilters(exclusionPatterns.get(localRootFolder),
+					item.getOriginalName())) {
+				String itemLocalFullLocation = localRootFolder + item.getOriginalName();
+				logger.trace("[[TRACE]] Serving item {}", itemLocalFullLocation);
+				Path itemLocalFullPath = Paths.get(itemLocalFullLocation);
+				if (FileUtils.notMatchFilters(exclusionPatterns.get(localRootFolder), item.getOriginalName())) {
+					if (item.getDeleted()) {
+						logger.debug("[[DEBUG]] Serving delete operation on {}", itemLocalFullLocation);
+						try {
+							if (Files.exists(itemLocalFullPath) && Files.isWritable(itemLocalFullPath)) {
+								logger.trace("[[TRACE]] Deleting file {}", itemLocalFullLocation);
+								Files.delete(itemLocalFullPath);
+							} else {
+								logger.info("[[INFO]] File {} cannot be deleted because it not exists or is not writable", itemLocalFullLocation);
 							}
+						} catch (IOException e) {
+							logger.error("Exception", e);
 						}
-						continue;
-					}
-					// check for file exists
-					// FIXME: apply regex filters here
-					if (Files.exists(itemLocalFullPath)) {
-						// check for obsolete file
-						if (itemLocalFullPath.toFile().lastModified() < item.getLastUpdate()) {
-							// file is obsolete, go for update
-							uploadService.getOrUpdate(itemLocalFullLocation,
-									item.getOwnedByFolder() + item.getOriginalName());
-							// update created file last modified to prevent synchronization loop
+					} else {
+						if (item.getUploadedBy().equals(UserSpecificPropertiesManager.getConfiguration().getAlias())) {
+							// deleted items -> uploaded by current user but not found on local machine
+							if (!Path.of(itemLocalFullLocation).toFile().exists()) {
+								logger.debug("[[DEBUG]] Deleting item {} uploaded by the current user which not exists on local filesystem", itemLocalFullLocation);
+								if (!uploadService.delete(remoteFolder, item.getOriginalName())) {
+									logger.error("[[ERROR]] Error deleting s3 file {}/{}", remoteFolder, item.getOriginalName());
+								}
+							}
+							continue;
+						}
+						// check for file exists
+						if (Files.exists(itemLocalFullPath)) {
+							// check for obsolete file
+							if (itemLocalFullPath.toFile().lastModified() < item.getLastUpdate()) {
+								logger.debug("[[DEBUG]] File {} is out to date, updating...", itemLocalFullLocation);
+								// file is obsolete, go for update
+								uploadService.getOrUpdate(itemLocalFullLocation,
+										item.getOwnedByFolder() + item.getOriginalName());
+								// update created file last modified to prevent synchronization loop
+								try {
+									logger.debug("[[DEBUG]] Setting file {} last modified same as the remote one: {}", itemLocalFullLocation, item.getLastUpdate());
+									Files.setLastModifiedTime(itemLocalFullPath, FileTime.fromMillis(item.getLastUpdate()));
+								} catch (IOException e) {
+									logger.error("Exception", e);
+								}
+							}
+						} else {
+							logger.debug("File {}/{} not found in the local folder {}", remoteFolder, item.getOriginalName(), localRootFolder);
+							uploadService.getOrUpdate(itemLocalFullLocation, item.getOwnedByFolder() + item.getOriginalName());
 							try {
+								logger.debug("[[DEBUG]] Setting file {} last modified same as the remote one: {}", itemLocalFullLocation, item.getLastUpdate());
 								Files.setLastModifiedTime(itemLocalFullPath, FileTime.fromMillis(item.getLastUpdate()));
 							} catch (IOException e) {
-								e.printStackTrace();
+								logger.error("Exception", e);
 							}
 						}
-						// file exists and up to date
-					} else {
-						uploadService.getOrUpdate(itemLocalFullLocation,
-								item.getOwnedByFolder() + item.getOriginalName());
-						try {
-							Files.setLastModifiedTime(itemLocalFullPath, FileTime.fromMillis(item.getLastUpdate()));
-						} catch (IOException e) {
-							e.printStackTrace();
-						}
 					}
-				}
+				} else {
+					logger.debug("[[DEBUG]] File excluded by filter {}", itemLocalFullLocation);
+				}				
+			} else {
+				logger.info("[[INFO]] File {} not managed because it is excluded by filters", item.getOriginalName());
 			}
 		}
 	}
